<resources>
    <string name="score" translatable="false">%1$d : %2$d</string>

    <string name="app_name">AndTTT</string>
    <string name="restart">Restart</string>

    <string name="play_single">Play Single</string>
    <string name="play_local">Play Local</string>
    <string name="play_online">Play Online</string>
    <string name="settings">Settings</string>

    <string name="player1" translatable="false">%1$s</string>
    <string name="player2" translatable="false">%1$s</string>

    <string name="player_won">%1$s won</string>
    <string name="nobody_won">Draw</string>

    <string name="animations">Animations</string>
    <string name="show_status_bar">Show status bar</string>
    <string name="night_mode">Night Mode</string>

    <string name="appearance">Appearance</string>
    <string name="about">About</string>

    <string name="libraries">Libraries</string>
    <string name="libraries_summary">used by this project</string>

    <string name="player">Player</string>
    <string name="bot">Bot</string>

    <string name="board_maximization">Board maximization</string>
    <string name="board_maximization_summary">Dynamically maximize board basing on screen size</string>
    <string name="ok">Ok</string>
    <string name="create_room">Create room</string>
    <string name="connect">Connect</string>
    <string name="loading">Please wait...</string>
    <string name="enter">Enter</string>
    <string name="connection_failed">Connection failed.</string>
    <string name="connecting">Connecting...</string>
    <string name="no_rooms">No rooms available at the moment, create a new one.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_address">Enter address of server.</string>
    <string name="enter_name">Enter desired nickname.</string>
    <string name="enter_room">Enter room name.</string>
    <string name="disconnected">Disconnected from server.</string>
    <string name="waiting_for_opponent">Waiting for opponent</string>
    <string name="error_client_name_empty">Client name must not be empty.</string>
    <string name="error_client_name_taken">This name is already taken. Try another one.</string>
    <string name="error_client_has_a_room">Client already has a room.</string>
    <string name="error_client_has_no_room">Client has no room.</string>
    <string name="error_client_not_found_in_room">Client not found in room.</string>
    <string name="error_client_not_found">Client not found.</string>
    <string name="error_client_has_no_turn">Client has no turn.</string>
    <string name="error_client_has_no_symbol">Client has no symbol.</string>
    <string name="error_room_name_empty">Room name must not be empty.</string>
    <string name="error_room_name_taken">This room name is already taken. Try another one.</string>
    <string name="error_room_full">Room is full.</string>
    <string name="error_room_not_found">Room not found.</string>
    <string name="error_room_not_empty">Room not empty.</string>
    <string name="error_enemy_not_found_but_should_be">Enemy not found.</string>
    <string name="error_enemy_not_found">Enemy not found.</string>
    <string name="error_position_already_occupied">Position already occupied.</string>
    <string name="error_position_out_of_bound">Position out of bound.</string>
    <string name="error_there_is_a_winner">There is a winner. Cannot move.</string>
    <string name="error_undefined">An undefined error occurred.</string>
    <string name="enemy_left">Enemy left. Do you want to stay in current room?</string>
    <string name="question_restart">Your enemy requested restart. Do you want to do it too?</string>
    <string name="denied_restart">Your enemy does not want to restart the game.</string>
    <string name="waiting">Waiting</string>
    <string name="connected">Connected</string>
    <string name="rooms">Rooms</string>
    <string name="error_client_name_too_long">Client name is too long. Max 20 characters.</string>
    <string name="error_room_name_too_long">Room name is too long. Max 20 characters.</string>
    <string name="error_room_password_too_long">Room password is too long. Max 20 characters.</string>
    <string name="error_room_password_mismatch">Incorrect room password.</string>
    <string name="error_room_password_not_found">Room password not found.</string>
    <string name="protected_with_password">Protected with password</string>
    <string name="enter_password">Enter password.</string>
    <string name="error">Error</string>
    <string name="input">Input</string>
    <string name="question">Question</string>
    <string name="please_wait">Please wait</string>
    <string name="wrong_format">Wrong address format.</string>
    <string name="custom_server">Custom server</string>
    <string name="connection_timeout">Connection timed out.</string>
    <string name="registering">Registering...</string>
    <string name="creating">Creating...</string>
    <string name="joining">Joining...</string>
    <string name="created_day_ago">created a day ago</string>
    <string name="created_days_ago">created %1$d days ago</string>
    <string name="created_hour_ago">created an hour ago</string>
    <string name="created_hours_ago">created %1$d hours ago</string>
    <string name="created_minute_ago">created a minute ago</string>
    <string name="created_minutes_ago">created %1$d minutes ago</string>
    <string name="created_second_ago">created a second ago</string>
    <string name="created_seconds_ago">created %1$d seconds ago</string>
    <string name="difficulty_easy">easy</string>
    <string name="difficulty_medium">medium</string>
    <string name="difficulty_hard">hard</string>
    <string name="arena">Arena</string>
    <string name="tap_to_restart">Tap board to restart the game</string>

    <string name="leave">Leave</string>
</resources>
