<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/appearance">
        <SwitchPreference
            android:defaultValue="false"
            android:key="show_status_bar"
            android:title="@string/show_status_bar" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="night_mode"
            android:title="@string/night_mode" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="animations"
            android:title="@string/animations" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/about">
        <Preference
            android:key="licenses"
            android:summary="@string/licenses_summary"
            android:title="@string/licenses">
            <intent
                android:targetClass="com.github.dawidd6.andttt.LicensesActivity"
                android:targetPackage="com.github.dawidd6.andttt" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
