<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.MenuFragment">

    <Button
        android:id="@+id/localButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/play_local"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="@dimen/rounded_button_text_size" />

    <Button
        android:id="@+id/singleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/play_single"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="@dimen/rounded_button_text_size" />

    <Button
        android:id="@+id/onlineButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/play_online"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="@dimen/rounded_button_text_size" />

    <Button
        android:id="@+id/arenaButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/arena"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="@dimen/rounded_button_text_size" />

    <Button
        android:id="@+id/settingsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_button"
        android:text="@string/settings"
        android:textColor="?android:attr/textColorTertiary"
        android:textSize="@dimen/rounded_button_text_size" />
</LinearLayout>
